--- a/hello-react/src/App.css
+++ b/hello-react/src/App.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap');
 
 
 
@@ -9,4 +9,5 @@
 body{
   background-color: aquamarine;
   color: brown;
+  font-family: 'Fuzzy Bubbles', cursive;
 }
